--- a/gpt.css
+++ b/gpt.css
@@ -11,7 +11,7 @@ body{
 .banner{
 	width: 100%;
 	height: 100vh;
-	background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url('https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/353404524_156385424113845_8210768026202576869_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=YVmn-O2w9RMAX__hZHb&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCMjqVMmQOhBlveE1EiP0JREXlIv0vjNry6ESNepqaSTg&oe=64A7A9B7');
+	background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url('https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/353404524_156385424113845_8210768026202576869_n.jpg?stp=cp6_dst-jpg&_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=iXQjUDb_OgAAX8Ol7h1&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfAEeYoFUlNZtUYjqFmP0tjLNsWeie8LDP9fqFp7mPz8HQ&oe=64B58177');
 	background-size: cover;
 	background-position: center;
 
