--- a/gpt.css
+++ b/gpt.css
@@ -360,85 +360,46 @@ h1 {
 }
 
 
-
-.container {
-	padding: 2rem;
-	background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url('https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/348587941_161523560012916_5242552814400351865_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=jDikMe8krLoAX-ZlUqO&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCqwyegvDOXhPYdHo7X_DmdG43lENv68GceifSyrdBolg&oe=64A8418E');
-	background-position: center;
+.img-gallery{
+	width: 80%;
+	margin: 100px auto 50px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: 30px;
 }
-.tekst{
-text-align: center;
-
-
+.img-gallery img{
+	width: 100%;
+	cursor: pointer;
 }
-.tekst h6{
-font-size: 40;
-color: white;
-font-weight: bold;
-margin-top: 100;
-
+.img-gallery img:hover{
+	transform: scale(0.8) rotate(-15deg);
+	border-radius: 20px;
+	box-shadow: 0 32px 75px rgba(68,77,136, 0.2);
 }
-
-.slider-wrapper {
-	position: relative;
-	max-width: 48rem;
-	margin: 0 auto;
-	overflow-x: hidden;
+.full-img{
+	width: 100%;
+	height: 100vh;
+	background: rgba(0,0,0,0.9);
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	z-index: 100;
 }
-
-.slider {
-	display: flex;
-	aspect-ratio: 16 / 9;
-	overflow-x: hidden;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	border-radius: 0.5rem;
-	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
-	scrollbar-width: none; /* Hide scrollbar Firefox */
+.full-img img{
+	width: 90%;
+	max-width: 500px;
 }
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-
-
-.slider img {
-	flex: 1 0 100%;
-	scroll-snap-align: start;
-	object-fit: cover;
-}
-
-.slider-nav {
-	display: flex;
-	column-gap: 1rem;
+.full-img span{
 	position: absolute;
-	bottom: 1.25rem;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
+	top: 5%;
+	right: 5%;
+	font-size: 30px;
+	color: #fff;
 }
 
-.slider-nav a {
-	width: 0.5rem;
-	height: 0.5rem;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.75;
-	transition: opacity ease 250ms;
-}
-
-.slider-nav a:hover {
-	opacity: 1;
-}
-@media (max-width: 600px) {
-	.slider-wrapper {
-	  overflow-x: auto;
-	}
-  
-	.slider {
-	  aspect-ratio: unset;
-	  flex-wrap: nowrap;
-	}
-  }
 .heading{
 	width: 90%;
 	display: flex;
