--- a/gpt.css
+++ b/gpt.css
@@ -57,6 +57,7 @@ body{
       .navbar {
         flex-direction: column;
         align-items: flex-start;
+	      font-size: 15px;
       }
       
       .navbar ul {
