--- a/gpt.css
+++ b/gpt.css
@@ -55,19 +55,9 @@ body{
 
 @media (max-width: 767px) {
       .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-	      font-size: 10px;
+       display: none;
       }
-      
-      .navbar ul {
-        flex-direction: column;
-      }
-      
-      .navbar ul li {
-        margin: 10px 0;
-      }
-    }
+}
 
 .fun-fact {
 	display: -ms-grid;
