--- a/gpt.css
+++ b/gpt.css
@@ -494,6 +494,7 @@ h1 {
     color: white;
     border-radius: 5px;
     transition: .3s all ease;
+	
 }
 .text-container a:hover{
     background-color: transparent;
@@ -515,6 +516,9 @@ h1 {
     .text-container h1{
         font-size: 50px;
     }
+	.text-container p{
+		font-size: 14px;
+	}
 }
 @media screen and (max-width: 1100px){
     .about-container{
